# sme_deps_common

./: .pre-commit-config.yaml  .travis.yml  README.md  appveyor.yml  build.ps1  build.sh  libsbml.diff  libtiff.diff  metis.diff  metis_gklib.diff  qcustomplot.diff  scotch.diff  tbb.diff  vtk.diff
.github/workflows/: release.yml
qcustomplot/: CMakeLists.txt  patch-6.2.diff
qcustomplot/cmake/: qcustomplotConfig.cmake.in
